Sounds are loaded as bundle files

--- a/Typist/Base.lproj/Main.storyboard
+++ b/Typist/Base.lproj/Main.storyboard
@@ -687,6 +687,24 @@
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ghm-k3-R37">
+                                <rect key="frame" x="20" y="20" width="440" height="230"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="230" id="382-8N-qrT"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="Ubm-08-Gwl">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="ghm-k3-R37" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="2U7-mS-fDC"/>
+                            <constraint firstItem="ghm-k3-R37" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="EqB-LC-Vpw"/>
+                            <constraint firstAttribute="trailing" secondItem="ghm-k3-R37" secondAttribute="trailing" constant="20" symbolic="YES" id="Uk7-uc-hEc"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
